Ajout chap3 perf et conv nat
figures pour Tf, Ta et Qa sans charge thermique

--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_High.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_V1V2_High.tex
@@ -4,7 +4,8 @@
     \def\legx{.5cm};
     \def\legy{\legx};
     
-    \begin{axis}[width={\width},height={\height},grid=both,minor tick num=4,
+    \begin{axis}[width={\width},height={\height},
+    grid=both,minor tick num=4,
     grid style={line width=.1pt, draw=gray!10},
     major grid style={line width=.2pt,draw=gray!50},
     xlabel={Temps $t$ [\unit{\s}]},
