--- a/tex/AHX.tex
+++ b/tex/AHX.tex
@@ -6,7 +6,7 @@ Cette partie concerne la mesure de la chaleur extraite par l'échangeur ambiant 
     \external{fig_AHXSchema}
     %\externalremake
     \input{../fig/fig_AHXSchema/fig_AHXSchema}
-    \caption{Schéma de l'échangeur ambiant, issu de \cite{ramadan_design_2021}}
+    \caption{Schéma de l'échangeur ambiant, issu de \cite{ramadan_design_2021}\echaf{ajouter TC \numlist{13;14;15} et le point de vue / axe $\mathbf e_x$}}
     \label{fig:AHXschema}
 \end{figure}
 
