--- a/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Ta.tex
+++ b/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Ta.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}
-	\def\width{\textwidth};
+	\def\width{.9*\textwidth};
 	\def\height{1*\width};
 	
 	\begin{axis}[width=\width,height=\height,
