--- a/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf.tex
+++ b/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf.tex
@@ -1,17 +1,42 @@
-\begin{tikzpicture}
+\begin{tikzpicture}[every mark/.append style={mark size=5pt}]
 	\def\width{.9*\textwidth};
-	\def\height{1*\width};
+	\def\height{\width};
 	
 	\begin{axis}[width=\width,height=\height,
+		grid=both,minor tick num=4, 
 		grid style={line width=.1pt, draw=gray!10},
 	    major grid style={line width=.2pt,draw=gray!50},
+	    xmin=.1,xmax=3.8,
 		xlabel={$DR$ [\unit{\percent}]},
 		ylabel={$T_f$ [\unit{\kelvin}]},
-		legend style = {at={(.95,.95)}, anchor=north east, rounded corners, legend columns=2}
+		legend style = {at={(0,1.05)}, anchor=south west, rounded corners, legend columns=3,},
+		legend cell align={left},
+		legend entries={`\texttt{V1}', `\texttt{V2}', \textsc{DeltaEC}, `\texttt{H1}',  `\texttt{H2}', {\quad}, \qty{0}{\watt}, \qty{50}{\watt}, \qty{100}{\watt}}
 	]
-	\addplot[only marks, mark=*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{V1}'};
-	\addplot[only marks, mark=o,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{V2}'};
-	\addplot[only marks, mark=*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{H1}'};
-	\addplot[only marks, mark=o,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{H2}'};
+	
+	\addlegendimage{only marks, mark=square*, color=MatlabBlue}
+	\addlegendimage{only marks, mark=square, color=MatlabBlue}
+	\addlegendimage{only marks, mark=oplus}
+	\addlegendimage{only marks, mark=square*, color=MatlabOrange}
+	\addlegendimage{only marks, mark=square, color=MatlabOrange}
+	\addlegendimage{empty legend}
+	\addlegendimage{only marks, mark=o}
+	\addlegendimage{only marks, mark=diamond}
+	\addlegendimage{only marks, mark=triangle}
+	
+	\addplot[only marks, mark=*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=o,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=o,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{H2}'};
+	
+	\addplot[only marks, mark=diamond*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc50.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=diamond,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc50.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=diamond*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc50.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=diamond,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc50.txt};%\addlegendentry{`\texttt{H2}'};
+	
+	\addplot[only marks, mark=triangle*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc100.txt};%\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=triangle,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc100.txt};%\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=triangle*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc100.txt};%\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=triangle,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc100.txt};%\addlegendentry{`\texttt{H2}'};
 	\end{axis}
 \end{tikzpicture}
