--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -383,13 +383,13 @@ Les calculs des nombres précédent peuvent guider l'intuition quant aux prédom
 
 \subsubsection{\'Elements finis}
 \paragraph{Volume d'adaptation d'impédance}
-Le modèle 2D simplifié ne prend pas en compte plusieurs paramètres : la cavité est en réalité un cône. Pour connaître l'allure des lignes de courant à l'intérieur en présence d'un flux de masse provoqué par la convection naturelle, un modèle de la cavité est réalisé dans le logiciel d'éléments finis Comsol Multiphysics grâce à une géométrie présenté sur la figure~\ref{fig:CaviteConvNat_ComsolGeometrie}. Avec ce logiciel, il est également possible de coupler une simulation acoustique en plus de la simulation de transferts thermiques, ce que le modèle 2D simplifié ne permet pas aisément.
+Le modèle 2D simplifié ne prend pas en compte plusieurs paramètres : la cavité est en réalité un cône. Pour connaître l'allure des lignes de courant à l'intérieur en présence d'un flux de masse provoqué par la convection naturelle, un modèle de la cavité est réalisé dans le logiciel d'éléments finis Comsol Multiphysics grâce à une géométrie présenté sur la figure~\ref{fig:Comsol_ModeleSimplifie_Geometrie}. Avec ce logiciel, il est également possible de coupler une simulation acoustique en plus de la simulation de transferts thermiques, ce que le modèle 2D simplifié ne permet pas aisément.
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=.5\textwidth]{../fig/fig_ConvNatComsol/Geometry.png}
-    \caption{Géométrie du volume d'adaptation d'impédance entre la source acoustique principale et le noyau thermoacoustique}
-    \label{fig:CaviteConvNat_ComsolGeometrie}
+    \includegraphics{../fig/fig_ConvNatComsol/Comsol_SimplifiedModel_Geometry5.png}
+    \caption{Géométrie du modèle simplifié du régénérateur et de la cavité d'adaptation d'impédance.}
+    \label{fig:Comsol_ModeleSimplifie_Geometrie}
 \end{figure}
 
 \paragraph{Régénérateur}
