--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -15,7 +15,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Tf}
-        \externalremake
+%        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf}
 		\caption{}
 		\label{fig:PerfConvNat_Tf}
@@ -23,7 +23,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Ta}
-        \externalremake
+%        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Ta}
 		\caption{}
 		\label{fig:PerfConvNat_Ta}
@@ -31,7 +31,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Qa}
-        \externalremake
+%        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Qa}
 		\caption{}
 		\label{fig:PerfConvNat_Qa}
@@ -39,7 +39,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_COP}
-        \externalremake
+%        \externalremake
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_COP}
 		\caption{}
 		\label{fig:PerfConvNat_COP}
