--- a/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf_DR2.tex
+++ b/fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf_DR2.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}
+\begin{tikzpicture}[every mark/.append style={mark size=5pt}]
 	\def\width{.9*\textwidth};
 	\def\height{1*\width};
 	
