--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -197,24 +197,32 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
     \centering
 	\begin{subfigure}[c]{.47\textwidth}
 		\centering
+		\external{fig_OrientationCore_H1}
+%    	\externalremake
 		\input{../fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex}
 		\caption{`\texttt{H1}'}
 		\label{fig:OrientationCore_H1}
 	\end{subfigure}		%
 	\begin{subfigure}[c]{.47\textwidth}
 		\centering
+		\external{fig_OrientationCore_H2}
+%    	\externalremake
 		\input{../fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex}
 		\caption{`\texttt{H2}'}
 		\label{fig:OrientationCore_H2}
 	\end{subfigure} \\ \vspace{1cm}
 	\begin{subfigure}[c]{.47\textwidth}
 		\centering
+		\external{fig_OrientationCore_V1}
+%    	\externalremake
 		\input{../fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex}
 		\caption{`\texttt{V1}'}
 		\label{fig:OrientationCore_V1}
 	\end{subfigure} %
 	\begin{subfigure}[c]{.47\textwidth}
 		\centering
+		\external{fig_OrientationCore_V2}
+%    	\externalremake
 		\input{../fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex}
 		\caption{`\texttt{V2}'}
 		\label{fig:OrientationCore_V2}
