Début correction LN + sép chap

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,20 @@
 
+@article{hireche_experimental_2020,
+	title = {Experimental and numerical investigation of natural convection flows in two horizontal thermoacoustic cavities},
+	volume = {149},
+	issn = {00179310},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0017931019338827},
+	doi = {10.1016/j.ijheatmasstransfer.2019.119195},
+	pages = {119195},
+	journaltitle = {International Journal of Heat and Mass Transfer},
+	shortjournal = {International Journal of Heat and Mass Transfer},
+	author = {Hireche, Omar and Ramadan, Islam and Weisman, Catherine and Bailliet, Hélène and Fraigneau, Yann and Baltean-Carlès, Diana and Daru, Virginie},
+	urldate = {2025-01-13},
+	date = {2020-03},
+	langid = {english},
+	file = {Hireche et al. - 2020 - Experimental and numerical investigation of natura.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\YMWI8C3M\\Hireche et al. - 2020 - Experimental and numerical investigation of natura.pdf:application/pdf},
+}
+
 @incollection{lewis_measurement_1998,
 	location = {Boston, {MA}},
 	title = {Measurement of Heat Conduction through Stacked Screens},
