--- a/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
+++ b/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
@@ -15,7 +15,7 @@
 %		\draw[blue] (.5,.5) node [anchor=center, preaction={fill=black!20,opacity=.7}] {RIX};
 %		\draw[red] (.33,.5) node [anchor=center, preaction={fill=black!20,opacity=.7}] {TA core};	
 	
-		\draw[MatlabOrange,rounded corners,very thick,preaction={fill=MatlabOrange!20,opacity=.5}] (.365,.7) rectangle (.245,.3) node[pos=.5,label={[rotate=90]center:\small \textbf{Noyau TA}}]{};
+		\draw[MatlabPurple,rounded corners,very thick,preaction={fill=MatlabPurple!20,opacity=.5}] (.365,.7) rectangle (.245,.3) node[pos=.5,label={[rotate=90]center:\small \textbf{Noyau TA}}]{};
 		
 		\node (AHX) at (.27,.65) {};
 		\node (Reg) at (.32,.65) {};
