--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -342,6 +342,8 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 
 \input{DispositifExpe}
 
+\input{EnsembleSimus}
+
 \input{EtudeExperimentale}
 
 %\input{InstabiliteCentreNoyau}
